# agent-trust

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release-sdk.yml
apps/api/: Dockerfile  package-lock.json  package.json
apps/api/src/: index.js  recall.js  recall.test.js
apps/observatory/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/observatory/src/: App.tsx  Observatory.tsx  index.css  main.tsx
apps/observatory/src/components/: ActivityFeed.tsx  AgentCard.tsx  ChatMessage.tsx  DelegationCard.tsx  ErrorBoundary.tsx  Layout.tsx  LearningCurve.tsx  RLLoopDiagram.tsx  ReputationBadge.tsx  SettingsPanel.tsx  StatCard.tsx  ToolCallCard.tsx  TrustGraph.tsx
apps/observatory/src/hooks/: useAgents.ts  useConnection.ts  useDelegations.ts  useMemory.ts  useProvenance.ts  useRecall.ts  useTrend.ts
apps/observatory/src/lib/: api.test.ts  api.ts  constants.ts  demo-data.ts  seed.ts  types.ts  utils.test.ts  utils.ts
apps/observatory/src/pages/: AgentDetailPage.tsx  AgentsPage.tsx  ChatPage.tsx  DashboardPage.tsx  (+3 more)
db/: init.sql
examples/: demo.ipynb  langgraph_multi_agent_demo.py  langgraph_rl_demo.py  quickstart.py
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/agent_trust/: __init__.py  core.py  crypto.py
sdks/python/agent_trust/backends/: __init__.py  base.py  http.py  sqlite.py
sdks/python/agent_trust/integrations/: __init__.py  crewai.py  langchain.py
sdks/python/tests/: test_crypto.py  test_sqlite_backend.py  test_trust.py
