[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanoniv-trust"
version = "0.1.6"
description = "Trust-based agent selection for multi-agent systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0"]
keywords = ["agents", "trust", "reputation", "multi-agent", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_trust"]

[project.optional-dependencies]
hosted = ["httpx>=0.25"]
crewai = ["crewai>=1.0"]
dev = ["pytest>=8.0", "cryptography>=42.0"]

[project.urls]
Homepage = "https://github.com/kanoniv/agent-trust"
Documentation = "https://github.com/kanoniv/agent-trust"
Repository = "https://github.com/kanoniv/agent-trust"
